--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -160,7 +160,7 @@
       <Filter>Kernel\Graphic</Filter>
     </ClInclude>
     <ClInclude Include="OpenGLRenderDevice.h">
-      <Filter>Kernel\Graphic</Filter>
+      <Filter>Kernel\Graphic\opengl</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -295,11 +295,11 @@
     <ClCompile Include="Viewport.cpp">
       <Filter>Kernel\Graphic</Filter>
     </ClCompile>
-    <ClCompile Include="OpenGLRenderDevice.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
     <ClCompile Include="..\Game.Desktop.OpenGL\gl3w.c">
-      <Filter>Kernel\Graphic</Filter>
+      <Filter>Kernel\Graphic\opengl</Filter>
+    </ClCompile>
+    <ClCompile Include="OpenGLRenderDevice.cpp">
+      <Filter>Kernel\Graphic\opengl</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -350,6 +350,9 @@
     </Filter>
     <Filter Include="Kernel\Graphic">
       <UniqueIdentifier>{a512568e-1bf5-4b59-8364-517228890d86}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Kernel\Graphic\opengl">
+      <UniqueIdentifier>{b7662a6a-e35e-4827-bc80-8e5550aff84c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
