--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -160,10 +160,28 @@
       <Filter>Kernel\Graphic</Filter>
     </ClInclude>
     <ClInclude Include="OpenGLRenderDevice.h">
-        <Filter>Kernel\Graphic\opengl</Filter>
+      <Filter>Kernel\Graphic\opengl</Filter>
     </ClInclude>
     <ClInclude Include="XmlParseHelperBeginPlay.h">
       <Filter>XmlParseHelpers</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderBuffer.h">
+      <Filter>Kernel\Graphic</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Kernel\Graphic</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader.h">
+      <Filter>Kernel\Graphic</Filter>
+    </ClInclude>
+    <ClInclude Include="OpenGLRenderBuffer.h">
+      <Filter>Kernel\Graphic\opengl</Filter>
+    </ClInclude>
+    <ClInclude Include="OpenGLShader.h">
+      <Filter>Kernel\Graphic\opengl</Filter>
+    </ClInclude>
+    <ClInclude Include="OpenGLTexture.h">
+      <Filter>Kernel\Graphic\opengl</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -306,6 +324,24 @@
     </ClCompile>
     <ClCompile Include="XmlParseHelperBeginPlay.cpp">
       <Filter>XmlParseHelpers</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderBuffer.cpp">
+      <Filter>Kernel\Graphic</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Kernel\Graphic</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>Kernel\Graphic</Filter>
+    </ClCompile>
+    <ClCompile Include="OpenGLShader.cpp">
+      <Filter>Kernel\Graphic\opengl</Filter>
+    </ClCompile>
+    <ClCompile Include="OpenGLTexture.cpp">
+      <Filter>Kernel\Graphic\opengl</Filter>
+    </ClCompile>
+    <ClCompile Include="OpenGLRenderBuffer.cpp">
+      <Filter>Kernel\Graphic\opengl</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
